# rointe-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  upload-prod.sh
rointe-sdk/: model.py  rointe_api.py
rointesdk/: __init__.py  device.py  dto.py  model.py  rointe_api.py  settings.py  utils.py
