[tool.poetry]
name = "rointe-sdk"
version = "1.3.0"
description = "A python 3 library to interact with Rointe Devices"
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "rointe-sdk"}]
repository = "https://github.com/tggm/rointe-sdk"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.27.1"
packaging = ">=21.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
