[tool.poetry]
name = "rointe-sdk"
version = "1.3.0"
description = "A python 3 library to interact with Rointe Devices"
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "rointe-sdk"}]
repository = "https://github.com/tggm/rointe-sdk"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.27.1"
packaging = ">=21.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError", "TYPE_CHECKING"]
fail_under = 0
show_missing = true

[tool.coverage.run]
source = ["rointe-sdk"]


[tool.isort]
known_first_party = "rointe-sdk,tests"
multi_line_output = 3
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
platform = "linux"
plugins = ["pydantic.mypy"]
python_version = "3.10"
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


